--- a/static/css/loading.css
+++ b/static/css/loading.css
@@ -6,6 +6,7 @@
     height: 100vh;
     background-color: black;
     opacity: 0.7;
+    z-index: 10;
 }
 
 .ring {
@@ -27,6 +28,7 @@
     text-transform: uppercase;
     text-shadow: 0 0 10px #ff9900;
     box-shadow: 0 0 20px rgba(0, 0, 0, .5);
+    z-index: 10;
 }
 
 .ring:before {
@@ -41,6 +43,7 @@
     border-right: 3px solid #ff9900;
     border-radius: 50%;
     animation: animateC 2s linear infinite;
+    z-index: 10;
 }
 
 .ring_span {
@@ -53,6 +56,7 @@
     background: transparent;
     transform-origin: left;
     animation: animate 2s linear infinite;
+    z-index: 10;
 }
 
 .ring_span:before {
@@ -65,6 +69,7 @@
     top: -6px;
     right: -8px;
     box-shadow: 0 0 20px #ff9900;
+    z-index: 10;
 }
 
 @keyframes animateC {
